<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/potion_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potion_name"
                android:textAppearance="@style/potion_data" />

            <TextView
                android:id="@+id/potion_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/potion_data" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potion_ingredients"
                android:textAppearance="@style/potion_data" />

            <TextView
                android:id="@+id/potion_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/potion_data" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potion_effects"
                android:textAppearance="@style/potion_data" />

            <TextView
                android:id="@+id/potion_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/potion_data" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potion_characteristics"
                android:textAppearance="@style/potion_data" />

            <TextView
                android:id="@+id/potion_characteristics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/potion_data" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potion_level"
                android:textAppearance="@style/potion_data" />

            <TextView
                android:id="@+id/potion_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/potion_data" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>